--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "koa-session2": "^2.2.8",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "layui": "^0.0.1",
     "promise-mysql": "^3.3.1",
     "pug": "^2.0.0-rc.1"
   },
