--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "layui": "^0.0.1",
+    "node-sass": "^4.12.0",
     "promise-mysql": "^3.3.1",
     "pug": "^2.0.0-rc.1"
   },
